Add comment form

--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ block content
         td.topSearchContainer__cell.topSearchContainer__cell--risumaru
           img.risumaruSearch(src="/images/risumaru_yubi_right.png")
         td.topSearchContainer__cell.topSearchContainer__cell--search
-          japaname-searchbox(focus="true")
+          japaname-searchbox(focus="focus")
           p.text-center(style="opacity:0.7")
             br
             |Accepts 
