--- a/riottags/kanji-detail.jade
+++ b/riottags/kanji-detail.jade
@@ -6,10 +6,13 @@ kanji-detail
           span.kanjiDetail__bigKanjiInner {thekanji} 
       div.kanjiDetail__centerColumn
         div.kanjiDetail__sounds 
-          virtual(each="{sound in romaji_sounds}") [{sound}] 
-        div.kanjiDetail__meaning {meaning} 
-      div.kanjiDetail__rightColumn
+          virtual(each="{sound in romaji_sounds}") [{sound}]
+        div.kanjiDetail__meaning {meaning}
 
+      div.kanjiDetail__rightColumn
+        form(onsubmit="{addComment}")
+          input(type="text" ref="comment_input" value="{kanji.comment}")
+          input(type="submit" ref="コ メ ン ト を 追 加")
   script.
     this.atejiSelector = opts.ateji_selector;
     this.currentSyllable = opts.current_syllable;
@@ -36,6 +39,12 @@ kanji-detail
         this.opened = false;
       }
     });
+    
+    addComment(e){
+      var comment_text = this.refs.comment_input.value;
+      this.kanji.comment = comment_text;
+      e.preventDefault();
+    }
 
     var this_tag = this;
 
