--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,7 @@
 @import "namesContainer";
 @import "syllableChanger";
 @import "kanjiDetail";
+@import "japanameTableVerticalContainer";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
