--- a/views/error.jade
+++ b/views/error.jade
@@ -6,7 +6,7 @@ block sub-content
   h2= error_code
 
   div
-    p.h3 !{error_message}
+    pre.h3 !{error_message}
     if(error)
       p -----error-----
       pre !{error}
