--- a/riottags/kanji-detail.jade
+++ b/riottags/kanji-detail.jade
@@ -19,6 +19,8 @@ kanji-detail
     this.favoriteKanjis = opts.favoriteKanjis;
 
     this.kanji = this.atejiSelector.getCurrentKanjiInSyllable(this.currentSyllable)
+    this.opened = false;
+    this.romaji_sounds = [];
 
     var this_tag = this;
 
