--- a/riottags/kanji-detail.jade
+++ b/riottags/kanji-detail.jade
@@ -11,7 +11,7 @@ kanji-detail
         p {kanji.comment}
       div.kanjiDetail__rightColumn
         form(onsubmit="{addComment}")
-          textarea(rows="3" style="width:80%;" ref="comment_input")
+          textarea.comment-textarea(rows="3" style="width:80%;")
           input(type="submit" value="コ メ ン ト を 追 加")
   script.
     this.atejiSelector = opts.ateji_selector;
@@ -41,11 +41,21 @@ kanji-detail
     });
     
     addComment(e){
-      var comment_text = this.refs.comment_input.value;
-      this.atejiSelector.addCommentToKanji(this.currentSyllable, comment_text);
-      this.refs.comment_input.value = "";
-      this.update();
       e.preventDefault();
+
+      //riot.v3.1.0ではrefが使えないことが判明
+      var comment_textarea = this.root.getElementsByClassName("comment-textarea")[0];
+      var comment_text = comment_textarea.value;
+
+
+      console.log("this.refs.comment_textarea");
+      console.log(comment_textarea);
+      console.log(comment_text);
+      
+      this.atejiSelector.addCommentToKanji(this.currentSyllable, comment_text);
+      comment_textarea.value = "";
+      this.update();
+
     }
 
     var this_tag = this;
