--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,6 +48,8 @@
 @import "horizonScroller";
 @import "namesContainer";
 @import "syllableChanger";
+@import "certMailMake";
+@import "certMailTable";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
