--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,6 +50,11 @@
 @import "syllableChanger";
 @import "certMailMake";
 @import "certMailTable";
+@import "latestJapanames";
+@import "japanamePicker";
+@import "japanameList";
+@import "kanjihouseMailBox";
+@import "kanjihouseNamer";
 
 ///////////// pages /////////////////
 //だんだん↑に移動していくべきだと思う
