--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1870,6 +1870,26 @@ body {
 .kanjihouseNamer__headCell {
   width: 10%; }
 
+.kanjihouseNamer__table {
+  width: 100%;
+  table-layout: auto; }
+  .kanjihouseNamer__table td {
+    vertical-align: top; }
+
+.kanjihouseNamer__kanaBox {
+  width: 5em; }
+
+.kanjihouseNamer__kanjiBox {
+  width: 3em; }
+
+.kanjihouseNamer__meaningsBox {
+  box-sizing: border-box;
+  width: 90%; }
+
+.kanjihouseNamer__commentBox {
+  box-sizing: border-box;
+  width: 90%; }
+
 html {
   box-sizing: border-box; }
 
