--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,7 +55,7 @@
 @import "japanameList";
 @import "kanjihouseMailBox";
 @import "kanjihouseNamer";
-//@import "kanjiDetail";
+@import "kanjiDetail";
 @import "japanameTableVerticalContainer";
 
 ///////////// pages /////////////////
