--- a/views/mypage/index.jade
+++ b/views/mypage/index.jade
@@ -14,6 +14,9 @@ block sub-content
     p
       a.button(href="/characters/kanjis") 漢字ページにいく
 
+  if user.haveRight("kanjihouse")
+    p
+      a.button(href="/kanjihouse") 漢字ハウスページにいく
 
   if user.my_japaname
     h1.text-center
