--- a/views/kanjihouse/cert_mail/drafts.jade
+++ b/views/kanjihouse/cert_mail/drafts.jade
@@ -6,6 +6,11 @@ block variables
   - body_id= 'bg-plane'
 
 block sub-content
+
+  ul
+    li
+      a(href="/kanjihouse/") 漢字ハウス管理ページに戻る
+
   h1 KanjiHouse用管理ページ
 
   h2 下書きメール一覧
