--- a/views/kanjihouse/cert_mail/sent_mails.jade
+++ b/views/kanjihouse/cert_mail/sent_mails.jade
@@ -7,7 +7,9 @@ block variables
   - body_id= 'bg-plane'
 
 block sub-content
-  h1 KanjiHouse用管理ページ
+  ul
+    li
+      a(href="/kanjihouse/") 漢字ハウス管理ページに戻る
 
   h2 送信済みメール一覧
 
