--- a/views/names/candidate.jade
+++ b/views/names/candidate.jade
@@ -69,19 +69,9 @@ block append body-end-scripts
     var candidateTables = riot.mount("candidate-tables", {
       names_selector:namesSelector,
       syllable_changer:syllableChanger,
-      show_comment: #{user && user.haveRight("kanji-house")}
+      show_comment: #{user && user.haveRight("kanji-house") || false}
     })[0] ;
 
-    /*
-      !{JSON.stringify(user)}
-
-
-
-      !{user.haveRight}
-
-
-      !{JSON.stringify(user.haveRight("kanji-house"))}
-    */
 
 
     var gonextButton = riot.mount("#goNextButtonCenter", "gonext-button", {
