--- a/views/kanjihouse/cert_mail/draft.jade
+++ b/views/kanjihouse/cert_mail/draft.jade
@@ -6,6 +6,12 @@ block variables
   - body_id= 'bg-plane'
 
 block sub-content
+  ul
+    li
+      a(href="/kanjihouse/") 漢字ハウス管理ページに戻る
+    li
+      a(href="/kanjihouse/cert_mail/drafts") 下書きメール一覧ページに戻る
+
   h2 下書きメールを編集する
 
 
