--- a/views/kanjihouse/cert_mail/sent.jade
+++ b/views/kanjihouse/cert_mail/sent.jade
@@ -6,6 +6,12 @@ block variables
   - body_id= 'bg-plane'
 
 block sub-content
+  ul
+    li
+      a(href="/kanjihouse/") 漢字ハウス管理ページに戻る
+    li
+      a(href="/kanjihouse/cert_mail/sent_mails") 送信済みメール一覧ページに戻る
+
   h1 メールの送信が完了しました。
 
   p 
