adding japaname insertion process

--- a/views/kanjihouse/cert_mail/drafts.jade
+++ b/views/kanjihouse/cert_mail/drafts.jade
@@ -11,7 +11,12 @@ block sub-content
     li
       a(href="/kanjihouse/") 漢字ハウス管理ページに戻る
 
+
   h1 KanjiHouse用管理ページ
+
+  div 
+    a.button(href="/kanjihouse/cert_mail/make") 新しいメールを作る
+
 
   h2 下書きメール一覧
 
