--- a/views/names/name.jade
+++ b/views/names/name.jade
@@ -24,7 +24,7 @@ block sub-content
 
     if japaname.namer
       include /include/ateji_box_vertical
-      mixin ateji_box_vertical(japaname.names)
+      mixin ateji_box_vertical(japaname)
 
     else
       include /include/ateji_box
