--- a/riottags/kanjihouse-namer.jade
+++ b/riottags/kanjihouse-namer.jade
@@ -69,24 +69,34 @@ kanjihouse-namer
       }
     };
 
-
     this.names_str = JSON.stringify([ this.name ]);
 
+
     this.on("update",function(){
-      this.names_str = JSON.stringify([ this.name ]);
+      this_tag.names_str = JSON.stringify([ this.name ]);
     });
 
     changeOriginal(e){
       var original_name = e.target.value;
 
-      this.name.original = original_name;
+      this_tag.name.original = original_name;
 
     }
 
     changeAtemoji(e){
       var atemoji = e.item.atemoji;
       var index = e.item.index;
-      this.name.atejis[index][e.target.name] = e.target.value;
+
+      if(e.target.name == "meanings"){
+        this_tag.name.atejis[index][e.target.name] 
+          = e.target.value.split("\n");
+      }
+      else{
+        this_tag.name.atejis[index][e.target.name] 
+          = e.target.value;
+      }
+
+      this_tag.update();
     }
 
     estimateKana(e){
@@ -124,7 +134,7 @@ kanjihouse-namer
         new_atejis.push(new Atemoji(kana, "", [""], ""));
       });
 
-      this.name.atejis = new_atejis;
+      this_tag.name.atejis = new_atejis;
     }
 
     kanaChangedForce(e){
@@ -136,19 +146,20 @@ kanjihouse-namer
         return new Atemoji(kana, "", [""], "");
       });
 
-      this.name.atejis = new_atejis;
+      this_tag.name.atejis = new_atejis;
     }
 
     addRow(e){
-      this.name.atejis.push(new Atemoji("","",[""],""))
+      this_tag.name.atejis.push(new Atemoji("","",[""],""))
     }
 
     deleteRow(e){
-        console.log("deleting");
+
+      console.log("deleting");
 
       console.log(e.item)
-      this.name.atejis.splice(e.item.index, 1);
-      this.update();
+      this_tag.name.atejis.splice(e.item.index, 1);
+      this_tag.update();
     }
 
 
@@ -158,9 +169,9 @@ kanjihouse-ateji-row
   td 
     input.kanjihouseNamer__kanjiBox(name="kanji" type="text" value="{atemoji.kanji}" onchange="{changeAtemoji}")
   td 
-    textarea.kanjihouseNamer__meaningsBox(name="meanings" onchange="{changeAtemoji}") {atemoji.meanings}
+    textarea.kanjihouseNamer__meaningsBox(name="meanings" value="{atemoji.meanings.join('\n')}" onchange="{changeAtemoji}") {atemoji.meanings.join('\n')}
   td 
-    textarea.kanjihouseNamer__commentBox(name="comment" onchange="{changeAtemoji}") {atemoji.changeAtemoji}
+    textarea.kanjihouseNamer__commentBox(name="comment" value="{atemoji.comment}" onchange="{changeAtemoji}") {atemoji.changeAtemoji}
   td
     a.button(onclick="{ondeleteFunc}") 削除
 
@@ -173,6 +184,7 @@ kanjihouse-ateji-row
 
     ondeleteFunc(e){
       if(this.ondelete && typeof this.ondelete === "function"){
+        //デリートボタンが押されたという情報だけでいい
         this.ondelete(e);
       }
     }
