--- a/views/kanjihouse/japaname.jade
+++ b/views/kanjihouse/japaname.jade
@@ -1,10 +1,10 @@
 extends /template/sub_layout
 
-
 block variables
   - title = "Japaname made in Kanji House"
   - description = 'page' 
   - body_id= 'bg-plane'
+
 
 block sub-content
   ul
@@ -13,7 +13,8 @@ block sub-content
     li
       a(href="/kanjihouse/japanames") Japaname一覧ページに戻る
 
-  h1 当て字をつくる 
+  h1 当て字を編集する
+  p #{japaname.original}
 
   kanjihouse-namer
 
@@ -24,5 +25,6 @@ block append body-end-scripts
   script(src="/javascripts/underscore-min.js")
   script(src="/riotjs/kanjihouse-namer.js")
   script.
-    riot.mount("kanjihouse-namer");
-
+    riot.mount("kanjihouse-namer",{
+      japaname:!{JSON.stringify(japaname)}
+    });
