--- a/views/kanjihouse/cert_mail/sent_mails.jade
+++ b/views/kanjihouse/cert_mail/sent_mails.jade
@@ -12,6 +12,7 @@ block sub-content
       a(href="/kanjihouse/") 漢字ハウス管理ページに戻る
 
   h2 送信済みメール一覧
+  p 最近作成されたメールが一番上に表示されます。
 
   include mailTable
 
